use gomatch in e2e tests
